<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".Test_multi_language">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#f000"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/welcome_multi_id"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#f000"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/name_multi_id"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank"
        android:textAlignment="center"
        android:textColor="#f000"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/thank_multi_id"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chang"
        android:id="@+id/change_lang"
        android:layout_marginTop="15dp"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="#002C40"
        />

</LinearLayout>